<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fon2">

        <Button
            android:id="@+id/bPrize"
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:text="@string/nextPrize"
            app:cornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/bPlay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/lack"
            android:textSize="16sp"
            app:cornerRadius="15dp"
            app:layout_constraintBottom_toTopOf="@+id/bNav"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imMain"
            android:layout_width="300dp"
            android:layout_height="300dp"
            app:layout_constraintBottom_toTopOf="@+id/bPlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/avtomat" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bNav"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/grey"
            app:itemIconSize="28dp"
            app:itemIconTint="@drawable/button_sellector"
            app:itemTextColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/bottom_menu">

        </com.google.android.material.bottomnavigation.BottomNavigationView>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="400dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/bNav"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:id="@+id/im1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/pulesos" />

            <ImageView
                android:id="@+id/im2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/utug" />

            <ImageView
                android:id="@+id/im3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/chaynik" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/grey"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imDraewr"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:srcCompat="@drawable/ic_profile" />

        <TextView
            android:id="@+id/tvNameDrawer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/balans"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvCash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="0"
            android:textColor="@color/teal_700"
            android:textSize="20sp"
            android:textStyle="bold" />

        <FrameLayout
            android:id="@+id/placeHolder"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:visibility="gone">

        </FrameLayout>

        <Button
            android:id="@+id/bRepenish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/replenish"
            android:textSize="16sp"
            app:backgroundTint="@color/grey2"
            app:cornerRadius="15dp" />

        <TextView
            android:id="@+id/tvInfoAdres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Адрес доставки:"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvAdress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/bExit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="395dp"
            android:text="Выйти"
            android:textSize="16sp"
            app:backgroundTint="@color/grey2"
            app:cornerRadius="15dp" />

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>